# mapa_libreta

./: .gitignore  main.py  pyproject.toml
app/: app.py  shared.py
components/: paneles.py  server.py
data/001_raw/: ECMWF_utci_2023_prueba.nc
notebooks/: 001_exploracion.ipynb
