[project]
name = "mapas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "shiny>=1.6.3",
    "xarray>=2026.4.0",
]
