[project]
name = "mapas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "ipyleaflet>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "shiny>=1.6.3",
    "shinywidgets>=0.8.1",
    "xarray>=2026.4.0",
]
